<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/menu_nd_home"
            android:title="@string/home"
            android:icon="@drawable/home"
            android:checked="true" />

        <item android:id="@+id/menu_nd_notice"
            android:title="@string/notice"
            android:icon="@drawable/notices" />

        <item android:id="@+id/menu_nd_holiday_calendar" android:title="@string/holiday_calendar"
            android:icon="@drawable/holiday_calendar" />

        <item android:id="@+id/menu_nd_contact_us" android:title="@string/contact_us"
            android:icon="@drawable/contact"/>

        <item android:id="@+id/menu_nd_about" android:title="@string/about"
            android:icon="@drawable/about" />

        <item android:id="@+id/menu_nd_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/gallery"/>
    </group>

    <group android:id="@+id/userStatus"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_nd_loginOrLogout"
            android:icon="@drawable/profile"
            android:title="@string/login"/>
    </group>


</menu>