<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_parent_message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/parent_message_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/date"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/parent_message_heading"
            style="@style/ParentMessageHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parent_message_heading_string"
            app:layout_constraintBottom_toTopOf="@+id/parent_message_body"
            app:layout_constraintEnd_toStartOf="@+id/dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_message_date" />

        <ImageView
            android:id="@+id/dropdown"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="8dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/arrow_drop_down"
            app:layout_constraintBottom_toTopOf="@+id/parent_message_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/parent_message_heading"
            app:layout_constraintTop_toBottomOf="@+id/parent_message_date" />

        <TextView
            android:id="@+id/parent_message_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            android:text="@string/parent_message_body_string"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_message_heading" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>