<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.login.LoginFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/school_logo"
                android:src="@drawable/school_logo"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <ImageView
                android:id="@+id/passwordLockIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:src="@drawable/lock"
                android:tint="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="@+id/password"
                app:layout_constraintEnd_toStartOf="@+id/password"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/password"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/username"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/userIdIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/userIdIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:src="@drawable/profile"
                android:tint="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="@+id/username"
                app:layout_constraintEnd_toStartOf="@+id/username"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/username"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/password"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/login_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/passwordLockIcon"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <Button
                android:id="@+id/login_submit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_btn_background"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>